--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "formik": "^2.4.2",
     "next": "13.4.5",
     "postcss": "8.4.24",
     "react": "18.2.0",
@@ -20,6 +21,7 @@
     "react-icons": "^4.9.0",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
-    "toastify-js": "^1.12.0"
+    "toastify-js": "^1.12.0",
+    "yup": "^1.2.0"
   }
 }
