--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "formik": "^2.4.2",
+    "leaflet": "^1.9.4",
     "next": "13.4.5",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "react-leaflet": "^4.2.1",
     "react-toastify": "^9.1.3",
+    "styled-components": "^6.0.5",
     "tailwindcss": "3.3.2",
     "toastify-js": "^1.12.0",
     "yup": "^1.2.0"
