--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "styled-components": "^6.0.5",
     "tailwindcss": "3.3.2",
     "toastify-js": "^1.12.0",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "zustand": "^4.4.7"
   }
 }
